# eps-compress

./: .gitignore  CMakeLists.txt  Compress.cpp  Compress.h  Coords.h  File.cpp  File.h  README.md  TextBox.cpp  TextBox.h  UserInterface.cpp  UserInterface.h  compress.cpp  compress.h  main.cpp
Boost_tests/: CMakeLists.txt  CompressTests.cpp  FileTests.cpp  testFile.txt
cmake_modules/: FindSFML.cmake
epsFiles/: EPSpunkty.eps  przyklad.eps  test.eps
