set (Boost_USE_STATIC_LIBS OFF)
find_package(Boost 1.45.0 REQUIRED COMPONENTS unit_test_framework)
if(Boost_FOUND)
    add_executable(boost_tests FileTests.cpp ../File.cpp ../Compress.cpp ../Coords.h CompressTests.cpp)
    include_directories (${Boost_INCLUDE_DIRS})
    target_link_libraries(boost_tests ${Boost_LIBRARIES})
    #target_link_libraries (test ../src)
    MESSAGE(${Boost_LIBRARIES})
endif()